--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
   "name": "jasmin",
   "version": "0.0.1",
-  "description": "Modular UI library for building modern web apps.",
-  "main": "dist",
+  "description": "A modular UI library for building modern web apps.",
+  "main": "lib/index.js",
   "author": "Jeff Miller",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/jamiller619/jasmin.git"
-  },
+  "repository": "https://github.com/jamiller619/jasmin.git",
   "scripts": {
-    "build-default": "rollup -c build/rollup.config.js --environment config:default",
-    "build-minify": "rollup -c build/rollup.config.js --environment config:minify",
-    "build-modules": "build/modules.js",
-    "build-dist": "npm run build-default && npm run build-minify && npm run build-modules",
-    "watch": "rollup -c --watch"
+    "build": "rollup -c build/rollup.config.js --environment config:default",
+    "build-min": "rollup -c build/rollup.config.js --environment config:minify",
+    "watch": "rollup -c build/rollup.config.js --environment config:default --watch"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-env": "^1.6.1",
     "merge-options": "^1.0.0",
     "morphdom": "^2.3.3",
-    "node-dir": "^0.1.17",
     "rollup": "^0.49.0",
     "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-babel-minify": "^3.1.2",
+    "rollup-plugin-cleanup": "^1.0.1",
     "rollup-plugin-commonjs": "^8.2.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "url-pattern": "^1.0.3"
+  },
+  "dependencies": {
+    "fastdom": "^1.0.6"
   }
 }
