--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "rollup-plugin-babel-minify": "^3.1.2",
     "rollup-plugin-cleanup": "^1.0.1",
     "rollup-plugin-commonjs": "^8.2.0",
+    "rollup-plugin-copy": "^0.2.3",
     "rollup-plugin-node-resolve": "^3.0.0",
     "url-pattern": "^1.0.3"
   },
