--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-core": "^6.26.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.6.1",
+    "fs-extra": "^5.0.0",
     "merge-options": "^1.0.0",
     "morphdom": "^2.3.3",
     "rollup": "^0.49.0",
