--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "name": "jasmin",
   "version": "0.0.1",
-  "description": "A modular UI library for building modern web apps.",
+  "description": "A Web Components library for building UI on the modern web",
   "main": "lib/index.js",
-  "author": "Jeff Miller",
+  "author": {
+    "name": "Jeff Miller",
+    "website": "https://jamiller.me",
+    "email": "hello@jamiller.me",
+    "twitter": "jamiller619"
+  },
   "license": "MIT",
   "repository": "https://github.com/jamiller619/jasmin.git",
   "scripts": {
-    "build": "rollup -c build/rollup.config.js --environment config:default",
+    "build": "build-readme rollup -c build/rollup.config.js --environment config:default",
     "build-min": "rollup -c build/rollup.config.js --environment config:minify",
-    "watch": "rollup -c build/rollup.config.js --environment config:default --watch"
+    "watch": "rollup -c build/rollup.config.js --environment config:default --watch",
+    "build-readme": "mustache package.json lib/README.mustache > README.md"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -19,6 +25,8 @@
     "fs-extra": "^5.0.0",
     "merge-options": "^1.0.0",
     "morphdom": "^2.3.3",
+    "mustache": "^2.3.0",
+    "parse5": "^4.0.0",
     "rollup": "^0.49.0",
     "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-babel-minify": "^3.1.2",
