--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "build": "rollup -c build/rollup.config.js --environment config:default",
     "build-min": "rollup -c build/rollup.config.js --environment config:minify",
+    "build-split": "rollup -c build/rollup.config.js --environment config:split",
     "watch": "rollup -c build/rollup.config.js --environment config:default --watch",
     "build-readme": "mustache package.json build/README.mustache > README.md"
   },
@@ -27,7 +28,7 @@
     "morphdom": "^2.3.3",
     "mustache": "^2.3.0",
     "parse5": "^4.0.0",
-    "rollup": "^0.49.0",
+    "rollup": "^0.56.3",
     "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-babel-minify": "^3.1.2",
     "rollup-plugin-cleanup": "^1.0.1",
