--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "freshjs",
-  "version": "0.0.1",
+  "name": "freshdom",
+  "version": "0.0.2",
   "description": "A JavaScript library for creating UI on the modern web via Web Components.",
   "main": "lib/index.js",
   "author": {
@@ -10,13 +10,13 @@
     "twitter": "jamiller619"
   },
   "license": "MIT",
-  "repository": "https://github.com/jamiller619/fresh.git",
+  "repository": "https://github.com/jamiller619/freshdom.git",
   "scripts": {
     "build": "rollup -c build/rollup.config.js --environment config:default",
     "build-min": "rollup -c build/rollup.config.js --environment config:minify",
     "build-split": "rollup -c build/rollup.config.js --environment config:split",
     "watch": "rollup -c build/rollup.config.js --environment config:default --watch",
-    "build-readme": "mustache package.json build/README.mustache > README.md"
+    "build-readme": "mustache package.json build/README.mustache > README.md && mustache package.json build/README.mustache > dist/README.md"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -27,7 +27,6 @@
     "merge-options": "^1.0.0",
     "morphdom": "^2.3.3",
     "mustache": "^2.3.0",
-    "parse5": "^4.0.0",
     "rollup": "^0.56.3",
     "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-babel-minify": "^3.1.2",
