--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "license": "MIT",
   "repository": "https://github.com/jamiller619/freshdom.git",
   "scripts": {
-    "build": "rollup -c build/rollup.config.js --environment config:default",
-    "build-min": "rollup -c build/rollup.config.js --environment config:minify",
-    "build-split": "rollup -c build/rollup.config.js --environment config:split",
-    "watch": "rollup -c build/rollup.config.js --environment config:default --watch",
+    "build": "npm run build-dev && npm run build-prod && npm run build-readme",
+    "watch": "rollup -c build/rollup.config.js --environment config:dev --watch",
+    "build-dev": "rollup -c build/rollup.config.js --environment config:dev",
+    "build-prod": "rollup -c build/rollup.config.js --environment config:prod",
     "build-readme": "mustache package.json build/README.mustache > README.md && mustache package.json build/README.mustache > dist/README.md"
   },
   "devDependencies": {
@@ -36,7 +36,7 @@
     "rollup-plugin-node-resolve": "^3.0.0",
     "url-pattern": "^1.0.3"
   },
-  "dependencies": {
+  "peerDependencies": {
     "fastdom": "^1.0.6"
   }
 }
