--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "merge-options": "^1.0.0",
     "morphdom": "^2.3.3",
     "mustache": "^2.3.0",
+    "prettier": "^1.11.1",
     "rollup": "^0.56.3",
     "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-babel-minify": "^3.1.2",
