--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "watch": "rollup -c build/rollup.config.js --environment config:dev --watch",
     "build-dev": "rollup -c build/rollup.config.js --environment config:dev",
     "build-prod": "rollup -c build/rollup.config.js --environment config:prod",
-    "build-readme": "mustache package.json build/README.mustache > README.md && mustache package.json build/README.mustache > dist/README.md"
+    "build-readme": "mustache package.json build/README.mustache > README.md && mustache package.json build/README.mustache > dist/README.md",
+    "publish": "npm version patch && cd dist && npm version patch && npm publish"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
