--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "freshdom",
   "version": "0.0.5",
   "description": "A JavaScript library for creating user interfaces on the modern web via Web Components.",
-  "main": "lib/index.js",
+  "main": "src/fresh.js",
   "author": {
     "name": "Jeff Miller",
     "website": "https://jamiller.me",
@@ -12,10 +12,8 @@
   "license": "MIT",
   "repository": "https://github.com/jamiller619/freshdom.git",
   "scripts": {
-    "build": "npm run build-dev && npm run build-prod",
-    "watch": "rollup -c build/rollup.config.js --environment config:dev --watch",
-    "build-dev": "rollup -c build/rollup.config.js --environment config:dev",
-    "build-prod": "rollup -c build/rollup.config.js --environment config:prod",
+    "build": "rollup -c build/rollup.config.js",
+    "dev": "rollup -c build/rollup.config.js -w",
     "publish": "npm version patch && cd dist && npm version patch && npm publish"
   },
   "devDependencies": {
@@ -27,13 +25,14 @@
     "fs-extra": "^5.0.0",
     "morphdom": "^2.3.3",
     "prettier": "^1.11.1",
-    "rollup": "^0.56.3",
-    "rollup-plugin-babel": "^3.0.2",
-    "rollup-plugin-babel-minify": "^3.1.2",
-    "rollup-plugin-cleanup": "^1.0.1",
-    "rollup-plugin-commonjs": "^8.2.0",
+    "rollup": "^0.57.1",
+    "rollup-plugin-babel": "^3.0.3",
+    "rollup-plugin-babel-minify": "^4.0.0",
+    "rollup-plugin-cleanup": "^2.0.0",
+    "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-copy": "^0.2.3",
-    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "uniqid": "^4.1.1",
     "url-pattern": "^1.0.3"
   }
 }
