--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "MIT",
   "repository": "https://github.com/jamiller619/freshdom.git",
   "scripts": {
-    "build": "rollup -c build/rollup.config.js",
+    "build": "node build/main.js && rollup -c build/rollup.config.js",
     "dev": "rollup -c build/rollup.config.js -w",
     "publish": "npm version patch && cd dist && npm version patch && npm publish"
   },
@@ -32,7 +32,6 @@
     "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-copy": "^0.2.3",
     "rollup-plugin-node-resolve": "^3.3.0",
-    "uniqid": "^4.1.1",
     "url-pattern": "^1.0.3"
   }
 }
