--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
   "license": "MIT",
   "repository": "https://github.com/jamiller619/freshdom.git",
   "scripts": {
-    "build": "node scripts/build.js && rollup -c scripts/rollup.config.js",
-    "dev": "rollup -c scripts/rollup.config.js -w",
+    "postinstall": "node scripts/install.js",
+    "build": "rollup -c scripts/build/rollup.config.js",
+    "dev": "rollup -c scripts/build/rollup.config.js -w",
     "publish": "npm version patch && cd dist && npm version patch && npm publish"
   },
-  "devDependencies": {
+  "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "deep-extend": "^0.5.0",
     "fastdom": "^1.0.8",
     "fs-extra": "^5.0.0",
     "morphdom": "^2.3.3",
@@ -30,8 +31,6 @@
     "rollup-plugin-babel-minify": "^4.0.0",
     "rollup-plugin-cleanup": "^2.0.0",
     "rollup-plugin-commonjs": "^9.1.0",
-    "rollup-plugin-copy": "^0.2.3",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "url-pattern": "^1.0.3"
+    "rollup-plugin-node-resolve": "^3.3.0"
   }
 }
