--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "rollup": "^0.57.1",
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-babel-minify": "^4.0.0",
-    "rollup-plugin-cleanup": "^2.0.0",
+    "rollup-plugin-cleanup": "^2.0.1",
     "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-node-resolve": "^3.3.0"
-  }
+  },
+  "devDependencies": {}
 }
