--- a/package.json
+++ b/package.json
@@ -15,23 +15,25 @@
     "postinstall": "node scripts/install.js",
     "build": "rollup -c scripts/build/rollup.config.js",
     "dev": "rollup -c scripts/build/rollup.config.js -w",
-    "publish": "npm version patch && cd dist && npm version patch && npm publish"
+    "publish": "npm version patch && cd dist && npm version patch && npm publish",
+    "lint": "prettier --write packages/**/*.js && eslint packages/**"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "deep-extend": "^0.5.0",
+    "eslint-plugin-babel": "^5.1.0",
     "fastdom": "^1.0.8",
     "fs-extra": "^5.0.0",
     "morphdom": "^2.3.3",
-    "prettier": "^1.11.1",
+    "prettier": "^1.12.1",
     "rollup": "^0.57.1",
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-babel-minify": "^4.0.0",
     "rollup-plugin-cleanup": "^2.0.1",
     "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-node-resolve": "^3.3.0"
-  },
-  "devDependencies": {}
+  }
 }
