--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "rollup-plugin-cleanup": "^2.0.1",
     "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-node-resolve": "^3.3.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1"
   }
 }
