--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "rollup-plugin-node-resolve": "^3.3.0"
   },
   "devDependencies": {
+    "deep-equal": "^1.0.1",
     "eslint": "^4.19.1"
   }
 }
